--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <!-- header -->
         <div class="preloader__header mt-auto">
           <div class="preloader__heading h2"><img src="img/assets/project4/icon_logo.png" alt=""></div>
-          <div class="preloader__subline small-caps mt-1">Once Upon a Time Mumbai</div>
+          <div class="preloader__subline small-caps mt-1">Once Upon a Time</div>
         </div>
         <!-- - header -->
         <!-- counter -->
@@ -308,7 +308,7 @@
                 <div class="section-masthead__heading split-text js-split-text" data-split-text-type="lines,words"
                   data-split-text-set="words">
                   <img src="../HTML/img/general/icon_logo.png" alt="">
-                  <h1 class="h1 mt-0 mb-0" style="color: #fff;">Once Upon A time</h1>
+                  <h1 class="h1 mt-0 mb-0" style="color: #fff;">Once Upon A time 2</h1>
                 </div>
                 <div class="w-100"> <img src="../HTML/img/general/tag_line.svg" alt=""></div>
                 <div class="section__headline mt-2 mx-auto"></div>
