--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta content="telephone=no" name="format-detection" />
   <meta name="HandheldFriendly" content="true" />
-  <meta name="description" content="Once Upon A Time – AJAX Portfolio HTML5 Template" />
+  <meta name="description" content="Once Upon A Time" />
   <!-- Google Fonts -->
   <link rel="stylesheet" type="text/css"
     href="https://fonts.googleapis.com/css?family=Cinzel:400,700%7CRaleway:500,500i,600,700%7CMaterial+Icons&amp;display=swap" />
@@ -419,7 +419,7 @@
               <div class="col-lg-8">
                 <div class="section-masthead__heading split-text js-split-text" data-split-text-type="lines,words"
                   data-split-text-set="words">
-                  <h1 class="mt-0 mb-0 h1"> Actual Final Product Features</h1>
+                  <h1 class="mt-0 mb-0 h1">Why Stories Matter?</h1>
                 </div>
                 <div class="w-100"></div>
                 <div class="section__headline mt-2 mx-auto"></div>
@@ -430,18 +430,23 @@
         <!-- - section MASTHEAD -->
        
         <!-- section IMAGE #1 -->
-        <section class="section section-image section_h-800">
+         <div>
+        <img src="../img/general/features.png" alt="">
+
+         </div>
+
+        <!-- <section class="section section-image section_h-800">
           <div class="section-image__wrapper" data-arts-parallax="data-arts-parallax" data-arts-parallax-factor="0.15">
             <div>
-              <div class="lazy-bg" data-src="img/assets/project7/img-7-1.jpg"></div>
+              <div class="lazy-bg" data-src="../img/general/features.png"></div>
             </div>
           </div>
-        </section>
+        </section> -->
         <!-- - section IMAGE #1 -->
         <!-- sections CONTENT & IMAGE #1 -->
         <div class="container-fluid no-gutters">
           <div class="row no-gutters align-items-center">
-            <div class="col-lg-6">
+            <!-- <div class="col-lg-6">
               <section class="section section-content clearfix pt-medium pb-medium container-fluid container-fluid_paddings pt-4" data-arts-os-animation="data-arts-os-animation">
                 <div class="section-content__inner">
                   <div class="w-100"></div>
@@ -461,8 +466,8 @@
                   </div>
                 </div>
               </section>
-            </div>
-            <div class="col-lg-6">
+            </div> -->
+            <div class="col-lg-12">
               <section class="section section-content clearfix pt-medium pb-medium container-fluid container-fluid_paddings" data-arts-os-animation="data-arts-os-animation">
                 <div class="section-content__inner">
                   <div class="w-100"></div>
@@ -472,13 +477,13 @@
                     <h2>Service Features</h2>
                   </div>
                   <div class="w-100"></div>
-                  <div class="section-content__text split-text js-split-text" data-split-text-type="lines" data-split-text-set="lines">
+                  <div class="section-content__text split-text js-split-text" data-split-text-type="lines" data-split-text-set="lines" style="max-width: 100%;">
                     <ul class="featute">
-                      <li><img src="../img/general/prompts.svg" alt=""> <span>Guided Prompts</span></li>
-                      <li><img src="../img/general/interface.svg" alt=""> <span>Simple User Friendly Interface</span></li>
-                      <li><img src="../img/general/voicetotext.svg" alt=""> <span>Voice to Text (package dependent)</span></li>
-                      <li><img src="../img/general/grammarly.svg" alt=""> <span>Grammarly Integration (package dependent)</span></li>
-                      <li><img src="../img/general/ai_editing.svg" alt=""> <span>One click AI editing (package dependent)</span></li>
+                      <li><img src="../img/general/prompts.svg" alt=""> <span>Guided <br> Prompts</span></li>
+                      <li><img src="../img/general/interface.svg" alt=""> <span>Simple User <br> Friendly Interface</span></li>
+                      <li><img src="../img/general/voicetotext.svg" alt=""> <span>Voice to Text <br>(package dependent)</span></li>
+                      <li><img src="../img/general/grammarly.svg" alt=""> <span>Grammarly <br> Integration (package dependent)</span></li>
+                      <li><img src="../img/general/ai_editing.svg" alt=""> <span>One click AI editing <br> (package dependent)</span></li>
                     </ul>
                   </div>
                 </div>
