product details page update 2

--- a/product-details.html
+++ b/product-details.html
@@ -354,17 +354,17 @@
               <div class="col-md-4">
                 <div class="packages">
                   <div class="package_header">
-                    <img class="mt-2" src="../HTML/img/general/package_shape01.svg" alt="">
+                    <img class="mt-2" src="../img/general/package_shape01.svg" alt="">
                     <h3 class="m-0">Genesis</h3>
                     <span>For self motivated writers comfortable with typing and using technology</span>
                   </div>
                   <div class="package_feature">
                     <ul>
-                      <li><img src="../HTML/img/general/check.svg" alt=""> <span>Weekly Guided Prompts - Website and Mobile App</span></li>
-                      <li><img src="../HTML/img/general/check.svg" alt=""> <span>1 Full Year to Complete your Story</span></li>
-                      <li><img src="../HTML/img/general/check.svg" alt=""> <span>Upto 300 high quality pages per book</span></li>
-                      <li><img src="../HTML/img/general/check.svg" alt=""> <span>Upto 20 photos</span></li>
-                      <li><img src="../HTML/img/general/check.svg" alt=""> <span>1 full colour, hard copy of the book (additional copies available at a cost)</span></li>
+                      <li><img src="../img/general/check.svg" alt=""> <span>Weekly Guided Prompts - Website and Mobile App</span></li>
+                      <li><img src="../img/general/check.svg" alt=""> <span>1 Full Year to Complete your Story</span></li>
+                      <li><img src="../img/general/check.svg" alt=""> <span>Upto 300 high quality pages per book</span></li>
+                      <li><img src="../img/general/check.svg" alt=""> <span>Upto 20 photos</span></li>
+                      <li><img src="../img/general/check.svg" alt=""> <span>1 full colour, hard copy of the book (additional copies available at a cost)</span></li>
                     </ul>
                   </div>
                   <a class="button button_solid button_black mb-0-5" data-hover="Buy Now" href="#"><span class="button__label-hover">Buy Now</span></a>
@@ -373,19 +373,19 @@
               <div class="col-md-4">
                 <div class="packages">
                   <div class="package_header">
-                    <img class="mt-2" src="../HTML/img/general/package_shape02.svg" alt="">
+                    <img class="mt-2" src="../img/general/package_shape02.svg" alt="">
                     <h3 class="m-0">Sculpt</h3>
                     <span>For writers who prefer the option of switching between typing and voice and need editing on the fly</span>
                   </div>
                   <div class="package_feature">
                     <ul>
-                      <li><img src="../HTML/img/general/check.svg" alt=""> <span>Weekly Guided Prompts - Website and Mobile App</span></li>
-                      <li><img src="../HTML/img/general/check.svg" alt=""> <span>1 Full Year to Complete your Story</span></li>
-                      <li><img src="../HTML/img/general/check.svg" alt=""> <span>Upto 500 high quality pages per book</span></li>
-                      <li><img src="../HTML/img/general/check.svg" alt=""> <span>Upto 30 photos</span></li>
-                      <li><img src="../HTML/img/general/check.svg" alt=""> <span>2 full colour, hard copy of the book (additional copies available at a cost)</span></li>
-                      <li><img src="../HTML/img/general/check.svg" alt=""> <span>Voice to Text Feature : state of the art voice transcription</span></li>
-                      <li><img src="../HTML/img/general/check.svg" alt=""> <span>Grammarly Integration</span></li>
+                      <li><img src="../img/general/check.svg" alt=""> <span>Weekly Guided Prompts - Website and Mobile App</span></li>
+                      <li><img src="../img/general/check.svg" alt=""> <span>1 Full Year to Complete your Story</span></li>
+                      <li><img src="../img/general/check.svg" alt=""> <span>Upto 500 high quality pages per book</span></li>
+                      <li><img src="../img/general/check.svg" alt=""> <span>Upto 30 photos</span></li>
+                      <li><img src="../img/general/check.svg" alt=""> <span>2 full colour, hard copy of the book (additional copies available at a cost)</span></li>
+                      <li><img src="../img/general/check.svg" alt=""> <span>Voice to Text Feature : state of the art voice transcription</span></li>
+                      <li><img src="../img/general/check.svg" alt=""> <span>Grammarly Integration</span></li>
                     </ul>
                   </div>
                   <a class="button button_solid button_black mb-0-5" data-hover="Buy Now" href="#"><span class="button__label-hover">Buy Now</span></a>
@@ -394,17 +394,17 @@
               <div class="col-md-4">
                 <div class="packages">
                   <div class="package_header">
-                    <img class="mt-2" src="../HTML/img/general/package_shape03.svg" alt="">
+                    <img class="mt-2" src="../img/general/package_shape03.svg" alt="">
                     <h3 class="m-0">Legacy</h3>
                     <span>For a fully customized and guided journey with dedicated interviewers</span>
                   </div>
                   <div class="package_feature">
                     <ul>
-                      <li><img src="../HTML/img/general/check.svg" alt=""> <span>Guided interviews/span></li>
-                      <!-- <li><img src="../HTML/img/general/check.svg" alt=""> <span>1 Full Year to Complete your Story</span></li>
-                      <li><img src="../HTML/img/general/check.svg" alt=""> <span>Upto 300 high quality pages per book</span></li>
-                      <li><img src="../HTML/img/general/check.svg" alt=""> <span></span>Upto 20 photos</li>
-                      <li><img src="../HTML/img/general/check.svg" alt=""> <span>1 full colour, hard copy of the book (additional copies available at a cost)</span></li> -->
+                      <li><img src="../img/general/check.svg" alt=""> <span>Guided interviews/span></li>
+                      <!-- <li><img src="../img/general/check.svg" alt=""> <span>1 Full Year to Complete your Story</span></li>
+                      <li><img src="../img/general/check.svg" alt=""> <span>Upto 300 high quality pages per book</span></li>
+                      <li><img src="../img/general/check.svg" alt=""> <span></span>Upto 20 photos</li>
+                      <li><img src="../img/general/check.svg" alt=""> <span>1 full colour, hard copy of the book (additional copies available at a cost)</span></li> -->
                     </ul>
                   </div>
                   <a class="button button_solid button_black mb-0-5" data-hover="Buy Now" href="#"><span class="button__label-hover">Buy Now</span></a>
