--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
                           <!-- label by default -->
                           <div class="js-split-text split-text"
                             data-split-text-type="lines" data-split-text-set="lines">
-                            <p class="product_desc text-accent">Cherish and preserve your most treasured moments with a beautifully crafted storytelling photo book.</p><span class=" figure-service__amount h3 text-accent">₹ 1100</span>
+                            <p class="product_desc text-accent">Cherish and preserve your most treasured moments with a beautifully crafted storytelling photo book.</p>
                             <a class="button button_solid button_black mb-0-5" data-hover="Learn More" href="product-details.html"><span class="button__label-hover">Learn More</span></a>
                           </div>
 
@@ -783,8 +783,7 @@
                           <!-- label by default -->
                           <div class="js-split-text split-text "
                             data-split-text-type="lines" data-split-text-set="lines">
-                            <p class="product_desc  text-accent">Celebrate your journey together with a personalized book filled with romance, memories, and heartfelt moments.</p><span class=" figure-service__amount h3 text-accent">₹
-                              2100</span>
+                            <p class="product_desc  text-accent">Celebrate your journey together with a personalized book filled with romance, memories, and heartfelt moments.</p>
                               <a class="button button_solid button_black mb-0-5" data-hover="Learn More" href="product-details.html"><span class="button__label-hover">Learn More</span></a>
                           </div>
                           <!-- - label by default -->
@@ -817,8 +816,7 @@
                           <!-- label by default -->
                           <div class=" js-split-text split-text"
                             data-split-text-type="lines" data-split-text-set="lines">
-                            <p class="product_desc text-accent">Showcase your career milestones, remarkable achievements, and inspiring success story in a professionally designed keepsake.</p><span class=" figure-service__amount h3 text-accent">₹
-                              1500</span>
+                            <p class="product_desc text-accent">Showcase your career milestones, remarkable achievements, and inspiring success story in a professionally designed keepsake.</p>
                               <a class="button button_solid button_black mb-0-5" data-hover="Learn More" href="product-details.html"><span class="button__label-hover">Learn More</span></a>
                           </div>
                           <!-- - label by default -->
