--- a/index.html
+++ b/index.html
@@ -817,7 +817,7 @@
                           <div class=" js-split-text split-text"
                             data-split-text-type="lines" data-split-text-set="lines">
                             <p class="product_desc text-accent">Showcase your career milestones, remarkable achievements, and inspiring success story in a professionally designed keepsake.</p>
-                              <a class="button button_solid button_black mb-0-5" data-hover="Learn More" href="product-details.html"><span class="button__label-hover">Learn More</span></a>
+                              <a class="button button_solid button_black mb-0-5" data-hover="Learn More" href="product-details.html"><span class="button__label-hover">Know More</span></a>
                           </div>
                           <!-- - label by default -->
                          
