--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
           <!-- Section Timeline-->
           <section class="section section-grid section-content overflow pb-medium stories_bg pb-2"
           data-arts-os-animation="data-arts-os-animation" data-grid-columns="3" data-grid-tablet="2"
-          data-grid-mobile="1" data-arts-theme-text="light" style="margin-top: -1px;">
+          data-grid-mobile="1"  style="margin-top: -1px;">
           <div class="container-fluid">
             <div class="row justify-content-center align-items-center section pb-2">
               <div class="col-12 col-lg-auto">
@@ -502,7 +502,7 @@
                       <h6 class="card-title">Childhood</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
                       <a onclick="showPopup(1)" class="trigger button button_bordered button_black mb-0" id="myBtn"
-                        data-hover="View" hsection section-properties section-content pb-small bg-whiteref="#"><span class="button__label-hover">View</span></a>
+                        data-hover="View" href="#"><span class="button__label-hover">View</span></a>
                     </div>
                   </div>
                   <div class="card mb-5">
@@ -699,7 +699,7 @@
       <!-- section GRID PROJECTS 3 COLUMNS-->
       <section class="section section-grid section-content overflow pb-medium bg-neutral-3"
         data-arts-os-animation="data-arts-os-animation" data-grid-columns="3" data-grid-tablet="2"
-        data-grid-mobile="1" data-arts-theme-text="light" style="margin-top: -1px;">
+        data-grid-mobile="1"  style="margin-top: -1px;">
         <div class="container-fluid">
           <section class="section section-masthead pt-small pb-small text-center"
             data-arts-os-animation="data-arts-os-animation" data-background-color="var(--color-light-1)">
@@ -745,7 +745,7 @@
                           <p class="product_desc text-primary">Cherish and preserve your most treasured moments with a
                             beautifully crafted storytelling photo book.</p>
                           <a class="button button_bordered button_accent mb-0-5" data-hover="Learn More"
-                            href="product-details.html"><span class="button__label-hover">Learn More ></span></a>
+                            href="product-details.html"><span class="button__label-hover">Learn More</span></a>
                         </div>
 
                         <!-- - label by default -->
@@ -781,7 +781,7 @@
                           <p class="product_desc text-primary">Celebrate your journey together with a personalized
                             book filled with romance, memories, and heartfelt moments.</p>
                           <a class="button button_bordered button_accent mb-0-5" data-hover="Learn More"
-                            href="product-details.html"><span class="button__label-hover">Learn More ></span></a>
+                            href="product-details.html"><span class="button__label-hover">Learn More</span></a>
                         </div>
                         <!-- - label by default -->
 
@@ -815,7 +815,7 @@
                           <p class="product_desc text-primary">Showcase your career milestones, remarkable
                             achievements, and inspiring success story in a professionally designed keepsake.</p>
                           <a class="button button_bordered button_accent mb-0-5" data-hover="Learn More"
-                            href="product-details.html"><span class="button__label-hover">Learn More ></span></a>
+                            href="product-details.html"><span class="button__label-hover">Learn More</span></a>
                         </div>
                         <!-- - label by default -->
 
@@ -886,7 +886,7 @@
             </div>
             <div class="col-md-4 col-12 d-flex align-items-center">
               <a class="button button_bordered button_white mb-0-5" data-hover="Learn More"
-                href="how_it_works.html"><span class="button__label-hover">Learn More ></span></a>
+                href="how_it_works.html"><span class="button__label-hover">Learn More</span></a>
             </div>
 
           </div>
