--- a/index.html
+++ b/index.html
@@ -306,18 +306,18 @@
           data-background-color="var(--color-dark-1)">
           <div class="section-masthead__inner section-fullheight__inner container-fluid">
             <header class="row section-masthead__header justify-content-center">
-              <div class="col">
+              <div class="col d-flex justify-content-center flex-column">
                 <!-- <div class="section-masthead__subheading small-caps mt-0 mb-1 mb-md-2 split-text js-split-text"
                   data-split-text-type="lines,words" data-split-text-set="words" style="color: #fff;"><span>Portraits
                     Your Memories</span></div> -->
                 <div class="w-100"></div>
                 <div class="section-masthead__heading split-text js-split-text" data-split-text-type="lines,words"
                   data-split-text-set="words">
-                  <img src="../img/general/icon_logo.png" alt="">
+                  <img src="img/general/icon_logo.png" alt="">
                   <!-- <h1 class="h1 mt-0 mb-0" style="color: #fff;">Once Upon A time</h1> -->
                 </div>
                 <h4 class="text-white h4 cochin-font">Preserving life’s most treasured moments <br> in beautifully crafted legacy books.</h4>
-                <!-- <div class="w-100"> <img src="../img/general/tag_line.svg" alt=""></div> -->
+                <!-- <div class="w-100"> <img src="img/general/tag_line.svg" alt=""></div> -->
                 <div class="section__headline mx-auto"></div>
               </div>
               <div class="section-masthead__wrapper-scroll-down section-masthead__wrapper-scroll-down_center">
@@ -377,9 +377,9 @@
             <div class="section-image__wrapper js-transition-img" data-arts-parallax="data-arts-parallax"
               data-arts-parallax-factor="0.15">
               <div class="js-transition-img__transformed-el">
-                <div class="lazy-bg" data-src="img/assets/projects/intro.mp4">
+                <div class="lazy-bg" data-src="./img/assets/projects/intro.mp4">
                   <video width="100%" autoplay loop plays-inline muted class="back-video">
-                    <source src="../img/general/intro.mp4" type="video/mp4">
+                    <source src="img/general/intro.mp4" type="video/mp4">
                   </video>
 
                 </div>
@@ -467,7 +467,7 @@
           </div>
         </div> -->
           <!-- Section Timeline-->
-          <section class="section section-grid section-content overflow pb-medium stories_bg pb-2"
+          <section  class="section section-grid section-content overflow pb-medium stories_bg pb-2"
           data-arts-os-animation="data-arts-os-animation" data-grid-columns="3" data-grid-tablet="2"
           data-grid-mobile="1"  style="margin-top: -1px;">
           <div class="container-fluid">
@@ -480,14 +480,14 @@
   
             </div>
           </div>
-          <div class="container-fluid p-0">
+          <div class="container-fluid p-0 ">
             <div class="row p-0 justify-content-between align-items-center section pb-medium">
               
               <div class="col-12 col-lg-auto stories_timeline">
-                <div class="cards-wrapper">
+                <div class="cards-wrapper" id="scrollTarget" >
   
                   <div class="card mb-5">
-                    <img src="../img/assets/timeline/timeline01.jpg" class="card-img-top" alt="...">
+                    <img src="img/assets/timeline/timeline01.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h6 class="card-title">First Steps</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -497,7 +497,7 @@
                   </div>
   
                   <div class="card mt-5">
-                    <img src="../img/assets/timeline/timeline02.jpg" class="card-img-top" alt="...">
+                    <img src="img/assets/timeline/timeline02.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h6 class="card-title">Childhood</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -506,7 +506,7 @@
                     </div>
                   </div>
                   <div class="card mb-5">
-                    <img src="../img/assets/timeline/timeline03.jpg" class="card-img-top" alt="...">
+                    <img src="img/assets/timeline/timeline03.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h6 class="card-title">School Days</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -516,7 +516,7 @@
                   </div>
   
                   <div class="card mt-5">
-                    <img src="../img/assets/timeline/timeline04.jpg" class="card-img-top" alt="...">
+                    <img src="img/assets/timeline/timeline04.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h6 class="card-title">Teenage Dreams</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -527,7 +527,7 @@
   
   
                   <div class="card mb-5">
-                    <img src="../img/assets/timeline/timeline05.png" class="card-img-top" alt="...">
+                    <img src="img/assets/timeline/timeline05.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h6 class="card-title">College Chronicles</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -537,7 +537,7 @@
                   </div>
   
                   <div class="card mt-5">
-                    <img src="../img/assets/timeline/timeline06.png" class="card-img-top" alt="...">
+                    <img src="img/assets/timeline/timeline06.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h6 class="card-title"> First Job, Big Dreams</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -548,7 +548,7 @@
   
   
                   <div class="card mb-5">
-                    <img src="../img/assets/timeline/timeline07.png" class="card-img-top" alt="...">
+                    <img src="img/assets/timeline/timeline07.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h6 class="card-title">Exploring the World</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -558,7 +558,7 @@
                   </div>
   
                   <div class="card mt-5">
-                    <img src="../img/assets/timeline/timeline08.png" class="card-img-top" alt="...">
+                    <img src="img/assets/timeline/timeline08.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h6 class="card-title">Family & Friendships</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -569,7 +569,7 @@
   
   
                   <div class="card mb-5">
-                    <img src="../img/assets/timeline/timeline09.png" class="card-img-top" alt="...">
+                    <img src="img/assets/timeline/timeline09.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h6 class="card-title">Passion & Purpose</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -579,7 +579,7 @@
                   </div>
   
                   <div class="card mt-5">
-                    <img src="../img/assets/timeline/timeline10.png" class="card-img-top" alt="...">
+                    <img src="img/assets/timeline/timeline10.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h6 class="card-title">Present & Future</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -587,23 +587,6 @@
                         data-hover="View" href="#"><span class="button__label-hover">View</span></a>
                     </div>
                   </div>
-  
-                  <!-- Modal -->
-  
-                  <div id="popup" class="popup modal-content animate__animated animate__fadeIn">
-                    <span class="close close-button" onclick="closePopup()">&times;</span>
-                    <div class="model-wrapper">
-                      <div class="left-content">
-                        <h3 id="popup-title"></h3>
-                        <p id="popup-description" class="typing-container"></p>
-                        <!-- <p id="body">Cochin</p>
-                            <p id="handwritten_notes">Falidasi Triasie</p>
-                            <p id="dates">engravers gothic bt</p> -->
-                      </div>
-                      <div class="right-image" id="popup-images"></div>
-                    </div>
-                  </div>
-                </div>
   
   
   
@@ -635,14 +618,14 @@
         <!-- section IMAGE #1 -->
 
         <div class="container-fluid p-0 wsm-bg">
-          <img src="../img/general/features.png" alt="">
+          <img src="img/general/features.png" alt="">
 
         </div>
 
         <!-- <section class="section section-image section_h-800">
           <div class="section-image__wrapper" data-arts-parallax="data-arts-parallax" data-arts-parallax-factor="0.15">
             <div>
-              <div class="lazy-bg" data-src="../img/general/features.png"></div>
+              <div class="lazy-bg" data-src="img/general/features.png"></div>
             </div>
           </div>
         </section> -->
@@ -1692,6 +1675,24 @@
     </div>
     <!-- - PAGE MAIN -->
   </div>
+  
+                  <!-- Modal -->
+  
+                  <div id="popup" class="popup modal-content animate__animated animate__fadeIn">
+                    <span class="close close-button" onclick="closePopup()">&times;</span>
+                    <div class="model-wrapper">
+                      <div class="left-content">
+                        <h3 id="popup-title"></h3>
+                        <p id="popup-description" class="typing-container"></p>
+                        <!-- <p id="body">Cochin</p>
+                            <p id="handwritten_notes">Falidasi Triasie</p>
+                            <p id="dates">engravers gothic bt</p> -->
+                      </div>
+                      <div class="right-image" id="popup-images"></div>
+                    </div>
+                  </div>
+                </div>
+  
   <canvas id="js-webgl"></canvas>
   <!-- PhotoSwipe -->
   <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true" data-arts-theme-text="light">
