content add into timeline

--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
                   <div class="card mb-5">
                     <img src="img/assets/timeline/timeline01.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h6 class="card-title">First Steps</h6>
+                      <h6 class="card-title">Childhood Memories</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
                       <a onclick="showPopup(0)" class="trigger button button_bordered button_black mb-0" id="myBtn"
                         data-hover="View" href="#"><span class="button__label-hover">View</span></a>
@@ -499,7 +499,7 @@
                   <div class="card mt-5">
                     <img src="img/assets/timeline/timeline02.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h6 class="card-title">Childhood</h6>
+                      <h6 class="card-title">School and College Days</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
                       <a onclick="showPopup(1)" class="trigger button button_bordered button_black mb-0" id="myBtn"
                         data-hover="View" href="#"><span class="button__label-hover">View</span></a>
@@ -508,7 +508,7 @@
                   <div class="card mb-5">
                     <img src="img/assets/timeline/timeline03.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h6 class="card-title">School Days</h6>
+                      <h6 class="card-title">Early Adulthood</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
                       <a onclick="showPopup(2)" class="trigger button button_bordered button_black mb-0" id="myBtn"
                         data-hover="View" href="#"><span class="button__label-hover">View</span></a>
@@ -518,7 +518,7 @@
                   <div class="card mt-5">
                     <img src="img/assets/timeline/timeline04.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h6 class="card-title">Teenage Dreams</h6>
+                      <h6 class="card-title">Building My Family</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
                       <a onclick="showPopup(3)" class="trigger button button_bordered button_black mb-0" id="myBtn"
                         data-hover="View" href="#"><span class="button__label-hover">View</span></a>
@@ -529,7 +529,7 @@
                   <div class="card mb-5">
                     <img src="img/assets/timeline/timeline05.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h6 class="card-title">College Chronicles</h6>
+                      <h6 class="card-title">Building a Career, Purpose, or Contribution</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
                       <a onclick="showPopup(4)" class="trigger button button_bordered button_black mb-0" id="myBtn"
                         data-hover="View" href="#"><span class="button__label-hover">View</span></a>
@@ -539,57 +539,41 @@
                   <div class="card mt-5">
                     <img src="img/assets/timeline/timeline06.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h6 class="card-title"> First Job, Big Dreams</h6>
+                      <h6 class="card-title">Triumphs & Challenges</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
                       <a onclick="showPopup(5)" class="trigger button button_bordered button_black mb-0" id="myBtn"
                         data-hover="View" href="#"><span class="button__label-hover">View</span></a>
                     </div>
                   </div>
-  
-  
                   <div class="card mb-5">
-                    <img src="img/assets/timeline/timeline07.png" class="card-img-top" alt="...">
+                    <img src="img/assets/timeline/timeline08.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h6 class="card-title">Exploring the World</h6>
+                      <h6 class="card-title">Golden Years</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
                       <a onclick="showPopup(6)" class="trigger button button_bordered button_black mb-0" id="myBtn"
                         data-hover="View" href="#"><span class="button__label-hover">View</span></a>
                     </div>
                   </div>
   
+  
                   <div class="card mt-5">
-                    <img src="img/assets/timeline/timeline08.png" class="card-img-top" alt="...">
+                    <img src="img/assets/timeline/timeline09.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h6 class="card-title">Family & Friendships</h6>
+                      <h6 class="card-title">Wisdom and Reflections</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
                       <a onclick="showPopup(7)" class="trigger button button_bordered button_black mb-0" id="myBtn"
                         data-hover="View" href="#"><span class="button__label-hover">View</span></a>
                     </div>
                   </div>
-  
-  
                   <div class="card mb-5">
-                    <img src="img/assets/timeline/timeline09.png" class="card-img-top" alt="...">
+                    <img src="img/assets/timeline/timeline10.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h6 class="card-title">Passion & Purpose</h6>
+                      <h6 class="card-title">Legacy & Hopes for the Future</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
                       <a onclick="showPopup(8)" class="trigger button button_bordered button_black mb-0" id="myBtn"
                         data-hover="View" href="#"><span class="button__label-hover">View</span></a>
                     </div>
                   </div>
-  
-                  <div class="card mt-5">
-                    <img src="img/assets/timeline/timeline10.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h6 class="card-title">Present & Future</h6>
-                      <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                      <a onclick="showPopup(9)" class="trigger button button_bordered button_black mb-0" id="myBtn"
-                        data-hover="View" href="#"><span class="button__label-hover">View</span></a>
-                    </div>
-                  </div>
-  
-  
-  
   
               </div>
             </div>
